lab-4-1 and lab 4-2

--- a/lab4-1/template/head.html
+++ b/lab4-1/template/head.html
@@ -3,8 +3,8 @@
 <head>
 	<title>lab4-1</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Таблица синусов</h1>
-</body>
-</html>
+
